Work on "Partner" address form + "Zulassung / Zahler KFZ" form

--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Partner/AdressenPflege/AdressenDetailsForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Partner/AdressenPflege/AdressenDetailsForm.cshtml
@@ -75,6 +75,8 @@
             _modelIsValid = @Model.IsValid.ToString().ToLower();
             _modelIsInsertMode = @Model.InsertModeTmp.ToString().ToLower();
 
+            InitBankdaten();
+
             $(function(){ 
                 if ($('#Kennung').val() == 'HALTER') {
                     $('#divEvbInfo').show();
