--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/ZahlerKfzSteuerForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/ZahlerKfzSteuerForm.cshtml
@@ -14,7 +14,8 @@
         @Html.HiddenFor(m => m.Adressdaten.Adresse.Typ)
         @Html.HiddenFor(m => m.Adressdaten.Adresse.TmpSelectionKey)
         @Html.HiddenFor(m => m.Adressdaten.Adresse.NoSaveButUiRefreshOnly)
-        
+        @Html.HiddenFor(m => m.Adressdaten.Adresse.Iban)
+
         @Html.FormValidationSummary()
         
         <div class="row-fluid">
@@ -64,6 +65,8 @@
             
             DocumentReadyBind(AjaxFormZahlerKfzSteuerInit);
             AjaxFormZahlerKfzSteuerInit();
+
+            InitBankdaten();
         </script>
     }
 </div>
