minor UI changes for services integrated mode

--- a/inetpub/wwwroot/ServicesMvc/Views/Fahrzeuge/SperrenEntsperren.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Fahrzeuge/SperrenEntsperren.cshtml
@@ -4,6 +4,7 @@
 <style type="text/css">
     h3.page-title { margin-bottom: 0; }
     div.span-alert-placeholder { margin-left: 0; }
+    #divFzgSperrenEntsperrenFilter .control-group { margin-bottom: 0; }
 </style>
 
 <h3 class="page-title" id="headerTitle">Versandaufträge <small>sperren / entsperren</small></h3>
