--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/ZulassungsdatenForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/ZulassungsdatenForm.cshtml
@@ -281,6 +281,9 @@
         
                 // Kennzeichenänderung bei Massenzulassung
                 SetFinValue_Textbox("GridFahrzeugAuswahlZulassung", '.editkennz', true);
+
+                // Änderung Kennzeichenreservierung bei Massenzulassung
+                SetFinValue_Textbox("GridFahrzeugAuswahlZulassung", '.editreskennz', true);
         
                 // Kennzeichenänderung bei Massen-/Schnellabmeldung
                 SetFinValue_Textbox("GridFahrzeugAuswahlAbmeldung", '.editkennzabm', true);
