FIN in Kennzeichenetikett uppercase

--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/FahrzeugdatenForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/FahrzeugdatenForm.cshtml
@@ -319,7 +319,7 @@
                     @Html.FormTextBoxFor(m => m.FzgModell, new {@class = "m-wrap medium no-border-bottom"})
                     @Html.FormTextBoxFor(m => m.Farbe, new { @class = "m-wrap medium colorautocomplete" })
 
-                    @Html.FormTextBlockFor(m => m.FahrgestellNr, new { @class = "m-wrap medium" })
+                    @Html.FormTextBlockFor(m => m.FahrgestellNr, new { @class = "m-wrap medium uppercase" })
 
                     <div class="margin-top-5"></div>
 
