--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/_LayoutRaw.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/_LayoutRaw.cshtml
@@ -22,6 +22,7 @@
         @Html.Partial("~/Areas/Common/Views/Dashboard/Partial/ChartJsonDataCustomizingScripts.cshtml")
 
         <img class="loading hide" src="~/assets/img/ajax-loading.gif" alt="Bitte einen Moment Geduld ...">
+        <div id="global-popup" class="white-popup mfp-hide"></div>
 
         <div class="page-content no-min-height">
             <div class="container-fluid body-container">
