Fixed Firefox css style issue at routing-info buttons

--- a/inetpub/wwwroot/ServicesMvc/Views/Uebfuehrg/Partial/Common.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Uebfuehrg/Partial/Common.cshtml
@@ -37,6 +37,10 @@
     .protokollartCell {
         min-width: 150px;
     }
+
+    a.btn.route-info {
+        display: inline-block !important;
+    }
     
 </style>
 
