Bugfix Report ZBII Ein-/Ausgänge

--- a/inetpub/wwwroot/ServicesMvc/Views/Equip/EinAusgaenge/Grid.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Equip/EinAusgaenge/Grid.cshtml
@@ -6,8 +6,8 @@
     var isInput = (Model.EinAusgangSelektor.FilterEinAusgangsTyp == "Inputs");
 }
 
-@(Html.Telerik()
-    .Grid<Fahrzeugbrief>()
+@(Html.XTelerik()
+    .XGrid<Fahrzeugbrief>()
     .Name(gridName)
 
     .XAjaxDataBinding("EinAusgaengeAjaxBinding", "Equip")
