Bugfix Report Offene Versandaufträge

--- a/inetpub/wwwroot/ServicesMvc/Views/Equip/VersandBeauftragungen/Grid.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Equip/VersandBeauftragungen/Grid.cshtml
@@ -9,8 +9,8 @@
 </div>
 
 
-@(Html.Telerik()
-    .Grid<Fahrzeugbrief>()
+@(Html.XTelerik()
+    .XGrid<Fahrzeugbrief>()
     .Name(gridName)
 
     .XAjaxDataBinding("VersandBeauftragungenAjaxBinding", "Equip")
