Optimierung der Spaltenbreiten in der Vorgangsbearbeitung

--- a/inetpub/wwwroot/ZLDMobile/Views/ErfassungMobil/EditZLDVorgaenge.cshtml
+++ b/inetpub/wwwroot/ZLDMobile/Views/ErfassungMobil/EditZLDVorgaenge.cshtml
@@ -34,13 +34,13 @@
                 <thead>
                 <tr>
                     <th class="TableGridCellNarrow LessHorizontalPadding">
-                        <div class="StaticHeaderTableColumnHeader TableColumnAuto Min-Width-100">Vorgang</div>
+                        <div class="StaticHeaderTableColumnHeader TableColumn110">Vorgang</div>
                     </th>
                     <th class="TableGridCellNarrow LessHorizontalPadding">
-                        <div class="StaticHeaderTableColumnHeader TableColumnAuto Min-Width-80">Kunde</div>
+                        <div class="StaticHeaderTableColumnHeader TableColumn140">Kunde</div>
                     </th>
                     <th class="TableGridCellNarrow LessHorizontalPadding">
-                        <div class="StaticHeaderTableColumnHeader TableColumnAuto Min-Width-80">Halter</div>
+                        <div class="StaticHeaderTableColumnHeader TableColumn140">Halter</div>
                     </th>
                     <th class="TableGridCellNarrow LessHorizontalPadding">
                         <div class="StaticHeaderTableColumnHeader TableColumn110">@Model.PropertyDisplayNames["Kennzeichen"]</div>
@@ -55,26 +55,26 @@
                         <div class="StaticHeaderTableColumnHeader TableColumn60">@Model.PropertyDisplayNames["Zahlart"]</div>
                     </th>
                     <th class="TableGridCellNarrow LessHorizontalPadding">
-                        <div class="StaticHeaderTableColumnHeader TableColumn100">Kennz.größe<br/>/ -anzahl</div>
+                        <div class="StaticHeaderTableColumnHeader TableColumn80">Kennz.größe<br/>/ -anzahl</div>
                     </th>
                     <th class="TableGridCellNarrow LessHorizontalPadding">
-                        <div class="StaticHeaderTableColumnHeader TableColumn60">R/W /<br/>Saison</div>
+                        <div class="StaticHeaderTableColumnHeader TableColumn40">R/W /<br/>Saison</div>
                     </th>
                     <th class="TableGridCellNarrow LessHorizontalPadding">
-                        <div class="StaticHeaderTableColumnHeader TableColumnAuto Min-Width-100">Bemerkung /<br/>Vers.zul. von</div>
+                        <div class="StaticHeaderTableColumnHeader TableColumnAuto Min-Width-80">Bemerkung /<br/>Vers.zul. von</div>
                     </th>
                 </tr>
                 <tr>
-                    <td class="TableColumnAuto Min-Width-100"></td>
-                    <td class="TableColumnAuto Min-Width-80"></td>
-                    <td class="TableColumnAuto Min-Width-80"></td>
+                    <td class="TableColumn110"></td>
+                    <td class="TableColumn140"></td>
+                    <td class="TableColumn140"></td>
                     <td class="TableColumn110"></td>
                     <td class="TableColumn70"></td>
                     <td class="TableColumn60"></td>
                     <td class="TableColumn60"></td>
-                    <td class="TableColumn100"></td>
-                    <td class="TableColumn60"></td>
-                    <td class="TableColumnAuto Min-Width-100"></td>
+                    <td class="TableColumn80"></td>
+                    <td class="TableColumn40"></td>
+                    <td class="TableColumnAuto Min-Width-80"></td>
                 </tr>
                 </thead>
                 <tbody>
