--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Fahrzeugbestand/Partial/FahrzeugAkteBestandSuche.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Fahrzeugbestand/Partial/FahrzeugAkteBestandSuche.cshtml
@@ -12,7 +12,8 @@
             @Html.HiddenFor(m => m.TmpSelectionKey)
             @Html.HiddenFor(m => m.TmpSelectionType)
 
-            @Html.FormTextBoxFor(m => m.FIN, new { @class = "m-wrap uppercase" })
+            @Html.FormTextBoxFor(m => m.FIN, new { @class = "m-wrap uppercase", col = "left" })
+            @Html.FormTextBoxFor(m => m.KundenReferenz, new { @class = "m-wrap", col = "right" })
 
             @Html.HiddenFor(m => m.Halter)
             @Html.HiddenFor(m => m.Kaeufer)
@@ -39,8 +40,7 @@
             @Html.FormTextBoxFor(m => m.Kennzeichen, new { @class = "m-wrap small", col = "left" })
             @Html.FormTextBoxFor(m => m.Briefnummer, new { @class = "m-wrap", col = "right" })
                     
-            @Html.FormCheckBoxFor(m => m.CocVorhanden, new { @class = "m-wrap", col = "left" }, labelHidden: true, postControlHtml: @<text><label class="checkbox">@Localize.CocAvailable</label></text>)
-            @Html.FormTextBoxFor(m => m.KundenReferenz, new { @class = "m-wrap", col = "right" })
+            @Html.FormCheckBoxFor(m => m.CocVorhanden, new { @class = "m-wrap" }, labelHidden: true, postControlHtml: @<text><label class="checkbox">@Localize.CocAvailable</label></text>)
 
 
             @*@Html.FormRequiredFieldsSummary()*@
