--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Fahrzeugbestand/Partial/FahrzeugAkteBestandGrid.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Fahrzeugbestand/Partial/FahrzeugAkteBestandGrid.cshtml
@@ -152,6 +152,9 @@
     }
 
     function DeleteFahrzeuge() {
+        if (!confirm('@Localize.SelectedItemsDoYouReallyWantToDelete.ToJavascriptString()'))
+            return false;
+
         $.ajax({
             type: "POST",
             url: "DeleteFahrzeuge",
