--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/FahrzeugdatenForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/FahrzeugdatenForm.cshtml
@@ -88,7 +88,7 @@
     }
 </style>
 
-<script>
+<script type="text/javascript">
 
     _modelIsValid = @ViewContext.ViewData.ModelState.IsValid.ToString().ToLower();
 
